@@ -95,8 +95,7 @@ bool detach(pid_t target);
 bool setaddr(pid_t target, void *addr, const value_t * to);
 bool checkmatches(globals_t * vars, value_t value,
 		  scan_match_type_t type);
-bool searchregions(globals_t * vars,
-                value_t value, bool snapshot);
+bool searchregions(globals_t * vars, scan_match_type_t match_type, value_t value, bool snapshot);
 bool peekdata(pid_t pid, void *addr, value_t * result);
 bool attach(pid_t target);
 bool getcommand(globals_t * vars, char **line);
