@@ -73,6 +73,8 @@ DEFINE_INTEGER_ROUTINE_FOR_ALL_INTEGER_TYPE(CHANGED, !=)
 DEFINE_INTEGER_ROUTINE_FOR_ALL_INTEGER_TYPE(NOTEQUALTO, !=)
 DEFINE_INTEGER_ROUTINE_FOR_ALL_INTEGER_TYPE(INCREASED, >)
 DEFINE_INTEGER_ROUTINE_FOR_ALL_INTEGER_TYPE(DECREASED, <)
+DEFINE_INTEGER_ROUTINE_FOR_ALL_INTEGER_TYPE(GREATERTHAN, >)
+DEFINE_INTEGER_ROUTINE_FOR_ALL_INTEGER_TYPE(LESSTHAN, <)
 
 /******************/
 /* Float specific */
@@ -109,6 +111,8 @@ DEFINE_FLOAT_ROUTINE_FOR_ALL_FLOAT_TYPE(NOTCHANGED, ==)         /* this is bad *
 DEFINE_FLOAT_ROUTINE_FOR_ALL_FLOAT_TYPE(CHANGED, !=)      /* this is bad, but better than above */
 DEFINE_FLOAT_ROUTINE_FOR_ALL_FLOAT_TYPE(INCREASED, >)
 DEFINE_FLOAT_ROUTINE_FOR_ALL_FLOAT_TYPE(DECREASED, <)
+DEFINE_FLOAT_ROUTINE_FOR_ALL_FLOAT_TYPE(GREATERTHAN, >)
+DEFINE_FLOAT_ROUTINE_FOR_ALL_FLOAT_TYPE(LESSTHAN, <)
 
 /********************/
 /* Special routines */
@@ -190,6 +194,8 @@ DEFINE_ANYTYPE_ROUTINE(CHANGED)
 DEFINE_ANYTYPE_ROUTINE(NOTCHANGED)
 DEFINE_ANYTYPE_ROUTINE(INCREASED)
 DEFINE_ANYTYPE_ROUTINE(DECREASED)
+DEFINE_ANYTYPE_ROUTINE(GREATERTHAN)
+DEFINE_ANYTYPE_ROUTINE(LESSTHAN)
 DEFINE_ANYTYPE_ROUTINE(INCREASED_WITH_REVERSE)
 DEFINE_ANYTYPE_ROUTINE(DECREASED_WITH_REVERSE)
 
@@ -233,6 +239,8 @@ scan_routine_t get_scanroutine(scan_data_type_t dt, scan_match_type_t mt)
     CHOOSE_ROUTINE_FOR_ALL_NUMBER_TYPES(MATCHNOTCHANGED, NOTCHANGED)
     CHOOSE_ROUTINE_FOR_ALL_NUMBER_TYPES(MATCHINCREASED, INCREASED)
     CHOOSE_ROUTINE_FOR_ALL_NUMBER_TYPES(MATCHDECREASED, DECREASED)
+    CHOOSE_ROUTINE_FOR_ALL_NUMBER_TYPES(MATCHGREATERTHAN, GREATERTHAN)
+    CHOOSE_ROUTINE_FOR_ALL_NUMBER_TYPES(MATCHLESSTHAN, LESSTHAN)
 
     return NULL;
 }
